testdata/scripts/convert_errors.txt
! gunk convert util.proto
stderr 'error: util.proto:5:1: "hello" is an unhandled proto file option'

-- util.proto --
syntax = "proto3";

package util;

option hello = "world";
